login with fixes
